--- a/stylecontact.css
+++ b/stylecontact.css
@@ -15,12 +15,16 @@ body {
 }
 
 .Logo{
+  max-width: 100%;
   display: inline-block;
   margin-left: 5px;
   margin-top: 5px;
-  width: 11.6vw;
-  height: 7.5vh;
-  
+  width: auto;
+  height: auto;
+}
+
+.Hamburger{
+  display: none;
 }
 
 .Navbar{
@@ -40,16 +44,30 @@ body {
 .Nav-Buttons li{
   color: #000;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 24px;
+  font-size: 1.3vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   font-style: italic;
 }
 
+.Nav-Buttons a:hover{
+  color: red;
+  text-shadow: 
+  2px 2px 0px black, 
+  -2px -2px 0px black, 
+  2px -2px 0px black, 
+  -2px 2px 0px black, 
+  0px 2px 0px black, 
+  0px -2px 0px black, 
+  2px 0px 0px black, 
+  -2px 0px 0px black; 
+}
+
 .Nav-Buttons a{
   text-decoration: none;
   color: black;
+  transition-duration: 0.1s;
 }
 
 .Nav-Buttons .Current a{
@@ -65,43 +83,132 @@ body {
   -2px 0px 0px black; 
 }
 
-.Filler{
+.FillerImg{
+  opacity: 0%;
+  max-width: 11.6vw;
   display: inline-block;
-  width: 11.6vw;
+  margin-left: 5px;
+  margin-top: 5px;
+  width: auto;
   height: 7.5vh;
 }
 
 /*<!--HERO-->*/
 .Hero-Container{
-  height: 45.83vh;
-  width: 83.12vw;
-  background-color: #5F1059;
-  border-left: solid;
-  border-right: solid;
-  border-color: black;
-  border-top: transparent;
-  border-bottom: transparent;
+    width: 83.12vw;
+    height: 51.3vh;
+    margin: 0 auto;
+    border-left: solid;
+    border-right: solid;
+    border-bottom: solid;
+    background: #5F1059 url("Images/All Pages/comictexture.png") no-repeat center center;
+    background-size: cover;
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between; 
+    overflow: hidden; 
+}
+
+.Raven1{
+  position: relative;
+  object-fit: contain;
+  float: right;
   margin-left: auto;
-  margin-right: auto;
+  max-height: 100%;  
+  height: 100%;
+  width: auto;
+  }
 
+.ContactUs1{
+    left: 10%;
+    position: relative;
+    color: white;
+    text-shadow: 
+    4px 4px 0px black, 
+    -4px -4px 0px black, 
+    4px -4px 0px black, 
+    -4px 4px 0px black, 
+    0px 4px 0px black, 
+    0px -4px 0px black, 
+    4px 0px 0px black, 
+    -4px 0px 0px black; ;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 5vw;
+    font-style: italic;
+    transition-duration: 0.4s;
+  }
+  
+.ContactUs1:hover{
+    color:rgb(0, 0, 0);
+    text-shadow: 
+    4px 4px 0px rgb(255, 255, 255), 
+    -4px -4px 0px rgb(255, 255, 255), 
+    4px -4px 0px rgb(255, 255, 255), 
+    -4px 4px 0px rgb(255, 255, 255), 
+    0px 4px 0px rgb(255, 255, 255), 
+    0px -4px 0px rgb(255, 255, 255), 
+    4px 0px 0px rgb(255, 255, 255), 
+    -4px 0px 0px rgb(255, 255, 255); 
+    
+  }
+  
+.PhoneHeader{
+  position: absolute;
+  left: 80vw;
+  width: auto;
 }
-
-.Comic-Texture{
-  height: 45.83vh;
-  width: 83.12vw;
-}
-
 
 /*<!--MAIN BODY-->*/
 .Main-Container{
-  height: 319.81vh;
+  padding-top: 44px;
+  padding-bottom: 100px;
   width: 83.12vw;
   background-color: white;
   border-style: solid;
   border-color: black;
   margin-left: auto;
   margin-right: auto;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr); 
+  grid-template-rows: repeat(6, 1fr);
+  column-gap: 1.04vw;
+  row-gap: 20px; 
 }
+
+.CallUs{
+  grid-column: 2/4;
+}
+
+#Call{
+  font-size: 1.5vw;
+  font-style: normal;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 30px;
+}
+
+#Number{
+  font-size: 1.3vw;
+  font-style: normal;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 300;
+  line-height: normal;
+  margin: 10px 5px 5px 0; 
+}
+
+.WestSide{
+  grid-column: 8/10;
+  font-size: 1.5vw;
+  font-style: normal;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 500;
+  line-height: normal;
+  margin: 10px 0 5px 0; 
+  text-align: center;
+}
+
+
 
 /*<!--FOOTER-->*/
 .Footer-Container{
@@ -113,24 +220,33 @@ body {
   margin-right: auto;
   border-left: solid black;
   border-right: solid black;
+  display: flex;                          
+  align-items: center;  
 }
 
-.Comic-Rip{
-  z-index: 0;
-  position: absolute;
-  top: 10vh;
-  left: 3.75vw;
-  width: 26.35vw;
-  height: 31.38vh;
+.ContactBar {
+  display: none;
 }
 
-.Logo-Over img{
-  position: absolute;
-  z-index: 1;
-  top: 21vh;
-  left: 9vw;
-  width: 15.83vw;
-  height: 9.907vh;
+.Comic-Rip {
+  position: relative;                 
+  background-image: url('Images/All Pages/Footerpagerip.png');
+  background-size: cover;                
+  background-position: center;            
+  width: 26vw;                           
+  height: 34vh;                       
+  display: flex;                         
+  justify-content: center;               
+  align-items: center;                    
+}
+
+.Comic-Rip img{   
+  width: 80%;                    
+  height: auto;                          
+}
+
+.SpiderIcon{
+  display: none;
 }
 
 .Contact{
@@ -139,7 +255,7 @@ body {
   left: 33.65vw;
   color: #FFF;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 32px;
+  font-size: 1.7vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -151,7 +267,7 @@ body {
   left: 37.18vw;
   color: #FFF;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 24px;
+  font-size: 1.3vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -163,7 +279,7 @@ body {
   left: 37.18vw;
   color: #FFF;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 24px;
+  font-size: 1.3vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -175,7 +291,7 @@ body {
   left: 37.18vw;
   color: #FFF;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 24px;
+  font-size: 1.3vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -187,7 +303,7 @@ body {
   left: 58.9vw;
   color: #FFF;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 32px;
+  font-size: 1.7vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -200,28 +316,200 @@ body {
   left: 58.9vw;
   color: #FFF;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 24px;
+  font-size: 1.3vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
 
 .PhoneImg{
+  max-height: 100%;
+  height: auto;
+  width: auto;
   position: absolute;
   top: 20.5vh;
   left: 33.65vw;
 }
 
 .InstaImg{
+  max-height: 100%;
+  height: auto;
+  width: auto;
   position: absolute;
   top: 27.4vh;
   left: 33.65vw;
 }
 
 .FacebookImg{
+  max-height: 80%;
+  height: auto;
+  width: auto;
   position: absolute;
   top: 34.91vh;
   left: 33.65vw;
 }
 
+@media screen and (max-width: 600px) {
 
+  .Hero-Container, .Signup-Container, .Footer-Container{
+    width: 100%;
+  }
+
+  body {
+    background-color: white;
+  }
+
+  .Exp-Container{
+    display: none;
+  }
+
+/*NAVIGATION------------------------------------------->*/
+
+  .Nav-Container{
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+  }
+
+  .Navbar {
+    display: none;
+  }
+
+  .Logo{
+    display: block;
+    width: 60%;
+    margin-bottom: 15px;
+  }
+
+  .Hamburger{
+    display: block;
+    width: 10%;
+    height: auto;
+    margin-bottom: 15px;
+  }
+
+  .FillerImg{
+    display: none;
+  }
+
+  .Nav-Buttons{
+    display: none;
+  }
+
+  /*<!--HERO---------------------------------------------------------------------------->*/
+  .Hero-Container{
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+    height: 20vh;
+    border-left: none;
+    border-right: none;
+  }
+
+.Raven1{
+  display: none;
+}
+
+.PhoneHeader{
+  display: none;
+}
+
+.ContactUs1{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -100%);
+  color: white;
+  text-shadow: 
+  3px 3px 0px black, 
+  -3px -3px 0px black, 
+  3px -3px 0px black, 
+  -3px 3px 0px black, 
+  0px 3px 0px black, 
+  0px -3px 0px black, 
+  3px 0px 0px black, 
+  -3px 0px 0px black; ;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 5vw;
+  font-style: italic;
+}
+
+
+
+.Main-Container {
+  width: 100%;
+  display: grid;
+  border: none;
+}
+
+/*<!--FOOTER---------------------------------------------------------------------------->*/
+.Contact{
+  display: none;
+}
+
+.PhoneFoot{
+  display: none;
+}
+
+.FacebookFoot{
+  display: none;
+}
+
+.InstaFoot{
+  display: none;
+}
+
+.Comic-Rip{
+  display: none;
+}
+
+.ContactBar{
+  display: block;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background-color: #1a1a1aee;
+  height: 70px;
+}
+
+.Location{
+  top: 15vh;
+  font-size: 4vw;
+}
+
+.Address{
+  top: 25vh;
+  font-size: 3vw;
+  max-width: 25%;
+}
+
+.SpiderIcon{
+  display: block;
+  height: 40%;
+  width: auto;
+}
+
+.PhoneImg{
+  top: 10px;
+  left: 35%;
+  transform: translateX(-50%); 
+}
+
+.InstaImg{
+  height: 6;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%); 
+}
+
+.FacebookImg{
+  height: 5.5vh;
+  top: 12px;
+  left: 65%;
+  transform: translateX(-50%); 
+}
+
+}
